-- This script was generated by the ERD tool in pgAdmin 4.
-- Please log an issue at https://redmine.postgresql.org/projects/pgadmin4/issues/new if you find any bugs, including reproduction steps.
BEGIN;


CREATE TABLE IF NOT EXISTS public.meeting_names
(
    id integer NOT NULL DEFAULT nextval('meeting_names_id_seq'::regclass),
    name character varying(255) COLLATE pg_catalog."default" NOT NULL,
    CONSTRAINT meeting_names_pkey PRIMARY KEY (id)
);

CREATE TABLE IF NOT EXISTS public.meetings
(
    id integer NOT NULL DEFAULT nextval('meetings_id_seq'::regclass),
    agenda text COLLATE pg_catalog."default",
    from_date date,
    to_date date,
    from_time time without time zone,
    to_time time without time zone,
    notes text COLLATE pg_catalog."default",
    meeting_name_id integer,
    CONSTRAINT meetings_pkey PRIMARY KEY (id)
);

ALTER TABLE IF EXISTS public.meetings
    ADD CONSTRAINT meetings_meeting_name_id_fkey FOREIGN KEY (meeting_name_id)
    REFERENCES public.meeting_names (id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION;

END;